--- a/Deployment.yaml
+++ b/Deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: nginx-deployment
 spec:
-  replicas: 3
+  replicas: 3  # You have 3 replicas defined
   selector:
     matchLabels:
       app: nginx
