--- a/Service.yaml
+++ b/Service.yaml
@@ -1,7 +1,21 @@
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: nginx-service
+# spec:
+#   selector:
+#     app: nginx
+#   ports:
+#     - protocol: TCP
+#       port: 80
+#       targetPort: 80
+#   type: LoadBalancer  # Expose service externally via AWS ALB
 apiVersion: v1
 kind: Service
 metadata:
   name: nginx-service
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-internal: "false"
 spec:
   selector:
     app: nginx
@@ -9,4 +23,4 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 80
-  type: LoadBalancer  # Expose service externally via AWS ALB
+  type: LoadBalancer
